<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cadetblue"
    android:orientation="vertical"
    tools:context="com.spaceppg.challenge100question.ActivityStart">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/magic_bg"
    android:gravity="center_horizontal">

    <ImageView
        android:id="@+id/img_Challenge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/play_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/start"
            android:textStyle="bold"
            android:textSize="20dp"
            android:paddingRight="45dp"
            android:onClick="start"
            android:background="@drawable/bu_start_anim" />

        <Button
            android:id="@+id/bu_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="shareApp"
            android:background="@drawable/bu_share_anim"
            android:text="@string/share"
            android:textStyle="bold"
            android:textSize="20dp"
            android:paddingRight="45dp"/>

        <Button
            android:id="@+id/bu_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textStyle="bold"
            android:textSize="20dp"
            android:paddingRight="45dp"
            android:background="@drawable/bu_email_anim"
            android:onClick="mailUs"/>

        <Button
            android:id="@+id/bu_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bu_rate_anim"
            android:text="@string/rate"
            android:textStyle="bold"
            android:textSize="20dp"
            android:paddingRight="45dp"
            android:onClick="rateApp"
             />

    </LinearLayout>
        <com.startapp.android.publish.ads.banner.Banner
        android:id="@+id/startAppBanner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>
</LinearLayout>

</LinearLayout>
