<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RusultActivity"
    android:gravity="center_horizontal"
    android:id="@+id/ly_1"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="@drawable/magic_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/timeOver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/red"
                android:layout_marginTop="50dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/resultLable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0 / 100"
                android:textSize="30sp"
                android:layout_marginTop="50dp"
                android:textStyle="bold"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_marginTop="60dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hs"
                    android:textSize="20sp"
                    android:layout_marginLeft="5dp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/highestScoreLable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="333"
                    android:textSize="20sp"
                    android:layout_marginLeft="5dp"
                    android:textStyle="bold"
                    />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp">

                <Button
                    android:id="@+id/reStart"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/bu_restart_anim" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/re"
                    android:layout_marginTop="53dp"
                    android:textSize="20sp"
                    android:layout_marginLeft="10dp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <com.startapp.android.publish.ads.banner.Banner
            android:id="@+id/startAppBanner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>

    </LinearLayout>

</LinearLayout>